sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:24: error: value += is not a member of Int
        0+=1
         ^